plugins {
    id 'application'
}

repositories {
    mavenCentral()
}

dependencies {
    def javafxVersion = '21.0.1'
    implementation "org.openjfx:javafx-controls:$javafxVersion"
    implementation "org.openjfx:javafx-fxml:$javafxVersion"
}

application {
    mainClass = 'MainApplication'
    applicationDefaultJvmArgs = [
        '--module-path', "${System.getProperty('java.home')}/lib",
        '--add-modules', 'javafx.controls,javafx.fxml'
    ]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}
